--- a/Relazione Progetto ASW/main.tex
+++ b/Relazione Progetto ASW/main.tex
@@ -505,7 +505,7 @@ I test di usabilità sono stati effettuati su dieci individui con caratteristich
 \section{Deployment}
 La messa in funzione dell'applicativo è possibile grazie alle funzionaità messe a disposizione da Docker, nello specifico si farà uso di Docker compose:
 \begin{itemize}
-    \item Clonare il repository al link:\href{http://localhost:8080/}{Github - Moma}%TODO%
+    \item Clonare il repository al link:\href{https://github.com/MicheleTorroni/MoMa}{Github - Moma}%TODO%
     \item Aprire un terminale nella root del progetto ed eseguire il comando: ' docker-compose up --build '
     \item Accedere ad un browser web all'indirizzo: \href{http://localhost:8080/}{Localhost:8080}
 \end{itemize}
