--- a/Relazione Progetto ASW/main.tex
+++ b/Relazione Progetto ASW/main.tex
@@ -414,7 +414,7 @@ Socket.IO é una libreria Javascript (scaricabile sempre da npm) orientata agli 
 \newline \newline
 Meccanismo interessante (e utilizzato all’interno del progetto) sono le “rooms”, ovvero gruppi di client all’interno dei quali é possibile inviare comunicazioni di tipo broadcast solo ai partecipanti.
 
-\subsection{Socket.IO}
+\subsection{Docker}
 Docker é una piattaforma software che fornisce la possibilitá si creare, scaricare ed eseguire unitá di codice sotto forma di "immagini".
 Le immagini possono essere eseguite molteplici volte (anche in parallelo) e ogni istanza é chiamata "container".
 \newline \newline
@@ -481,7 +481,7 @@ In questo caso si omette la trascrizione del codice poiché le operazioni soprac
 \newpage
 
 \section{Test}
-Il corretto funzionamento dell’applicazione é stata testata sui principali Browser (Chrome, Firefox ed Edge), sopratutto per quanto riguarda la reattività del sistema.
+Il corretto funzionamento dell’applicazione é stata testato sui principali Browser (Chrome, Firefox ed Edge), sopratutto per quanto riguarda la reattività del sistema.
 \newline \newline
 Per testare le API e le funzionalità di Socket.IO é stata utilizzata l’applicazione desktop “Postman”, che permette di simulare chiamate http, fornendo un’interfaccia grafica semplice e intuitiva.
 \newline \newline
